--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My first "cool" page</title>
+  <style>
+    body {
+      background-color: rgb(142, 35, 124);
+    }
+  </style>
 </head>
 
 <body>
