Big Add from end of Day 1

--- a/index.html
+++ b/index.html
@@ -6,14 +6,43 @@
   <title>My first "cool" page</title>
   <style>
     body {
-      background-color: rgb(142, 35, 124);
+      background-color: rgb(212, 156, 205);
     }
   </style>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <h1>Hello Everyone</h1>
+  <p class="">
+      <blockquote class="card sarcasm">
+        I am Pretty bad with HTML and CSS, If this is still here by the time you look at the page then please forgive my barbaric Webpage.  I hope to improve on this quick quickly cause I am generally a pretty artistic person.
+      </blockquote>
+  </p>
+  <h2> A little about Mick</h2>
   <p>
-    Hello world 
+   <div>- I have surviveded to the age of 26, in August that will have made it to 27.</div>
+   <div>- I live with My Girlfriend, our Two dogs and a roomate who is one of my best friends</div>
+   <div> - I worked at a Security Company for almost 6 years installing and servicing commercial security systems for customers like St. Lukes, St. Als, Boise State and both the City of Boise and State of Idaho.</div>
+   <div> - I got interested in code while learning to make indie games using the game enging "Gamemaker"</div>
+   <div></div>- I have been a Dungeons and Dragons DM for about 5 years as well and am currently running a homebrew campaign that has been going on for just over two years.</div>
+   <div> - I recently Got into 3D printing and have been trying to get better with 3d design so I can print my own custom things. </div>
+   <div> - One of hobbies is to paint the miniature characters for our DnD campaign.</div>
+   <div> - I Like to Collect things, From Records to Figures to dirty dishes at my desk.</div>
+   <div>- I enjoy all sorts of table top games but can also be pretty picky with them too.  Not a fan of games with too many random mechanics.</div>
+   <div> - I seem to dip my toes into lots of different hobbies from Carpentry to traditional arts to 3D design, I seem to bounce around a lot. </div>
+   <div>- Coding to me is certainly a hobby I would like to take further than just the surface, and hopefully it will turn out to be a fulfilling career.</div>
+   <blockquote class="card sarcasm">
+     These are some of my group's DnD Characters.
+   </blockquote>
+   <div>
+    <img src="Galo.jpg" alt="Galo Sengen" height="20%" width="20%">
+    <img src="Barth.jpg" alt="Batholomew Briarbrick" height="20%" width="20%">
+    <img src="Tordek.jpg" alt="Tordek" height="20%" width="20%">
+    <img src="Fenvira.jpg" alt="Fenvira Nimblefingers" height="20%" width="20%">
+    
+   </div>
   </p>
 </body>
 
