--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h1>Hello Everyone</h1>
   <p class="">
       <blockquote class="card sarcasm">
-        I am Pretty bad with HTML and CSS, If this is still here by the time you look at the page then please forgive my barbaric Webpage.  I hope to improve on this quick quickly cause I am generally a pretty artistic person.
+        I am Pretty bad with HTML and CSS, If this is still here by the time you look at the page then please forgive my barbaric Webpage.  I hope to improve on this quickly cause I am generally a pretty artistic person.
       </blockquote>
   </p>
   <h2> A little about Mick</h2>
